@@ -1,3 +1,7 @@
+2002-07-13  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/oprofiled.c: don't throw away last samples on shutdown notification
+ 
 2002-07-13  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* TODO: update
